--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link rel=“stylesheet” type=“text/css” href=“main.css”>
+  <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
 
