--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             </div>
   
            <div class="col-lg-8">
-                <form id="contact-form" action="https://formspree.io/f/fourdesyncsandoval@gmail.com" method="POST">
+                <form id="contact-form" action="https://formspree.io/f/mzzebzzr" method="POST">
                 <div class="row gy-4">
   
                   <div class="col-md-6">
