--- a/index.html
+++ b/index.html
@@ -400,21 +400,22 @@
   
            <div class="col-lg-8">
                 <!-- modify this form HTML and place wherever you want your form -->
-<form
-  action="https://formspree.io/f/mzzebzzr"
-  method="POST"
->
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
-</form>
+              <form id="contact-form" action="https://formspree.io/f/mzzebzzr" target="_blank" method="POST">
+                <div class="col-md-6">
+                  <label>
+                    Your email:
+                    <input type="email" name="email">
+                  </label>
+                </div>
+                <div class="col-md-6">
+                  <label>
+                    Your message:
+                    <textarea name="message"></textarea>
+                  </label>
+                  </div>
+                  <!-- your other form fields go here -->
+                  <button type="submit">Send</button>
+            </form>
   
           </div>
   
