--- a/index.html
+++ b/index.html
@@ -399,16 +399,15 @@
             </div>
   
            <div class="col-lg-8">
-                <!-- modify this form HTML and place wherever you want your form -->
               <form id="contact-form" action="https://formspree.io/f/mzzebzzr" target="_blank" method="POST">
                 <div class="col-md-6">
                      <input type="email" name="email" class="form-control" placeholder="Your Email" required="">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
                 </div>
                   <!-- your other form fields go here -->
-                  <button type="submit">Send</button>
+                  <button type="submit">Send Message</button>
             </form>
   
           </div>
