--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
             </div>
   
            <div class="col-lg-8">
+              <div class="row gy-4">
               <form id="contact-form" action="https://formspree.io/f/mzzebzzr" target="_blank" method="POST">
                 <div class="col-md-6">
                      <input type="email" name="email" class="form-control" placeholder="Your Email" required="">
@@ -411,7 +412,7 @@
             </form>
   
           </div>
-  
+           </div>
         </div>
   
       </section><!-- /Contact Section -->
